// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Editor Node Question builds the expected component 1`] = `
<div>
  <div
    className="component obojobo-draft--chunks--question is-viewed pad is-type-default"
  >
    <div
      className="flipper question-editor"
    >
      <div
        className="content-back"
      >
        <div
          className="question-settings"
        >
          <label>
            Question Type
          </label>
          <select
            contentEditable={false}
          >
            <option
              value="ObojoboDraft.Chunks.MCAssessment"
            >
              Multiple Choice
            </option>
          </select>
          <label
            className="question-type"
            contentEditable={false}
          >
            <input
              checked={false}
              name="vehicle1"
              onChange={[Function]}
              type="checkbox"
              value="Bike"
            />
            Survey Only
          </label>
        </div>
      </div>
    </div>
    <button
      className="delete-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Question Editor Node Question component adds Solution 1`] = `"<div><div class=\\"component obojobo-draft--chunks--question is-viewed pad is-type-default\\"><div class=\\"flipper question-editor\\"><div class=\\"content-back\\"><div class=\\"question-settings\\"><label>Question Type</label><select contenteditable=\\"false\\"><option value=\\"ObojoboDraft.Chunks.MCAssessment\\">Multiple Choice</option></select><label class=\\"question-type\\" contenteditable=\\"false\\"><input type=\\"checkbox\\" name=\\"vehicle1\\" value=\\"Bike\\">Survey Only</label></div><button class=\\"add-solution\\" contenteditable=\\"false\\">Add Solution</button></div></div><button class=\\"delete-button\\">×</button></div></div>"`;

exports[`Question Editor Node Survey Question builds the expected component 1`] = `
<div>
  <div
    className="component obojobo-draft--chunks--question is-viewed pad is-type-survey"
  >
    <div
      className="flipper question-editor"
    >
      <div
        className="content-back"
      >
        <div
          className="question-settings"
        >
          <label>
            Question Type
          </label>
          <select
            contentEditable={false}
            defaultValue={Object {}}
          >
            <option
              value="ObojoboDraft.Chunks.MCAssessment"
            >
              Multiple Choice
            </option>
          </select>
          <label
            className="question-type"
            contentEditable={false}
          >
            <input
              checked={true}
              name="vehicle1"
              onChange={[Function]}
              type="checkbox"
              value="Bike"
            />
            Survey Only
          </label>
        </div>
        <button
          className="add-solution"
          contentEditable={false}
          onClick={[Function]}
        >
          Add Solution
        </button>
      </div>
    </div>
    <button
      className="delete-button"
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;
